// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Code /> should render Code with default properties 1`] = `
.c1 {
  color: hsla(216,27%,36%,1);
  font-family: monospace;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c0 {
  padding: 2px 8px;
  background-color: hsla(220,30%,96%,1);
  border-radius: 4px;
  display: inline-block;
}

<div>
  <span
    class="Boxweb__Box-xvyj85-0  c0"
  >
    <code
      class="c1"
      color="surface.text.subtle.lowContrast"
      font-family="code"
      font-size="75"
    >
      TEST_TOKEN
    </code>
  </span>
</div>
`;

exports[`<Code /> should render large Code with different types 1`] = `
.c1 {
  color: hsla(216,27%,36%,1);
  font-family: monospace;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c2 {
  color: hsla(216,16%,60%,1);
  font-family: monospace;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c3 {
  color: hsla(217,56%,17%,1);
  font-family: monospace;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c4 {
  color: hsla(214,18%,69%,1);
  font-family: monospace;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c5 {
  color: hsla(217,18%,45%,1);
  font-family: monospace;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c0 {
  padding: 0px 4px;
  background-color: hsla(220,30%,96%,1);
  border-radius: 4px;
  display: inline-block;
}

<div>
  <span
    class="Boxweb__Box-xvyj85-0  c0"
  >
    <code
      class="c1"
      color="surface.text.subtle.lowContrast"
      font-family="code"
      font-size="100"
    >
      TEST
    </code>
  </span>
  <span
    class="Boxweb__Box-xvyj85-0  c0"
  >
    <code
      class="c2"
      color="surface.text.muted.lowContrast"
      font-family="code"
      font-size="100"
    >
      TEST
    </code>
  </span>
  <span
    class="Boxweb__Box-xvyj85-0  c0"
  >
    <code
      class="c3"
      color="surface.text.normal.lowContrast"
      font-family="code"
      font-size="100"
    >
      TEST
    </code>
  </span>
  <span
    class="Boxweb__Box-xvyj85-0  c0"
  >
    <code
      class="c4"
      color="surface.text.placeholder.lowContrast"
      font-family="code"
      font-size="100"
    >
      TEST
    </code>
  </span>
  <span
    class="Boxweb__Box-xvyj85-0  c0"
  >
    <code
      class="c5"
      color="surface.text.subdued.lowContrast"
      font-family="code"
      font-size="100"
    >
      TEST
    </code>
  </span>
</div>
`;

exports[`<Code /> should render medium Code with different types 1`] = `
.c1 {
  color: hsla(216,27%,36%,1);
  font-family: monospace;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c2 {
  color: hsla(216,16%,60%,1);
  font-family: monospace;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c3 {
  color: hsla(217,56%,17%,1);
  font-family: monospace;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c4 {
  color: hsla(214,18%,69%,1);
  font-family: monospace;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c5 {
  color: hsla(217,18%,45%,1);
  font-family: monospace;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c0 {
  padding: 2px 8px;
  background-color: hsla(220,30%,96%,1);
  border-radius: 4px;
  display: inline-block;
}

<div>
  <span
    class="Boxweb__Box-xvyj85-0  c0"
  >
    <code
      class="c1"
      color="surface.text.subtle.lowContrast"
      font-family="code"
      font-size="75"
    >
      TEST
    </code>
  </span>
  <span
    class="Boxweb__Box-xvyj85-0  c0"
  >
    <code
      class="c2"
      color="surface.text.muted.lowContrast"
      font-family="code"
      font-size="75"
    >
      TEST
    </code>
  </span>
  <span
    class="Boxweb__Box-xvyj85-0  c0"
  >
    <code
      class="c3"
      color="surface.text.normal.lowContrast"
      font-family="code"
      font-size="75"
    >
      TEST
    </code>
  </span>
  <span
    class="Boxweb__Box-xvyj85-0  c0"
  >
    <code
      class="c4"
      color="surface.text.placeholder.lowContrast"
      font-family="code"
      font-size="75"
    >
      TEST
    </code>
  </span>
  <span
    class="Boxweb__Box-xvyj85-0  c0"
  >
    <code
      class="c5"
      color="surface.text.subdued.lowContrast"
      font-family="code"
      font-size="75"
    >
      TEST
    </code>
  </span>
</div>
`;
